--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "description": "",
   "peerDependencies": {
-    "@stylistic/eslint-plugin-js": ">=2.9.0",
+    "@stylistic/eslint-plugin-js": ">=2.9.0 <4.0.0",
     "eslint": ">=9.0.0",
     "eslint-plugin-brace-rules": ">=0.1.6"
   },
